refactor(domain): 졸(병)은 속한 나라에 따라 5개의 이동 방향 리턴 기능 수정